--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,11 @@
-<h3>Post Form</h3>
+<h3>My Edit</h3>
 
-<%= form_tag post_path(@post), method: "put" do %>
+<%= form_for(@post) do |p|%>
   <label>Post title:</label><br>
-  <%= text_field_tag :title, @post.title %><br>
+  <%= p.text_field :title %><br>
 
   <label>Post Description</label><br>
-  <%= text_area_tag :description, @post.description %><br>
+  <%= p.text_area :description %><br>
   
-  <%= submit_tag "Submit Post" %>
+  <%= p.submit "Update Post" %>
 <% end %>
