--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,12 @@
 <h3>Post Form</h3>
 
-<%= form_tag post_path(@post), method: "put" do %>
-  <label>Post title:</label><br>
-  <%= text_field_tag :title, @post.title %><br>
-
-  <label>Post Description</label><br>
-  <%= text_area_tag :description, @post.description %><br>
+<%= form_for(@post) do |f| %>
   
-  <%= submit_tag "Submit Post" %>
+  <%= f.label :title, 'Post title:' %><br>
+  <%= f.text_field :title %><br>
+  <%= f.label :description, 'Post desciption:' %><br>
+  <%= f.text_field :title %><br>
+  <%= f.submit%>
+
+  
 <% end %>
