--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,7 +5,7 @@
   <%= f.label :title, 'Post title:' %><br>
   <%= f.text_field :title %><br>
   <%= f.label :description, 'Post desciption:' %><br>
-  <%= f.text_field :title %><br>
+  <%= f.text_field :description %><br>
   <%= f.submit%>
 
   
